# tinjs

./: .gitignore  CMakeLists.txt  README.md  make.sh
.github/workflows/: nightly.yml
src/: main.cpp
src/api/cpp/: cpp_fs.cpp  cpp_fs.hpp  jsc_util.cpp  jsc_util.hpp
src/api/ext/: swc.cpp  swc.hpp
src/api/js/: fetch.cpp  fetch.hpp  global.cpp  global.hpp  print.cpp  print.hpp  println.cpp  println.hpp  require.cpp  require.hpp
src/api/js/module/: fs.cpp  fs.hpp  http.cpp  http.hpp  httplib.h  test.cpp  test.hpp  test_matchers.cpp  test_matchers.hpp
src/api/js/prototype/: _js_Array.cpp  _js_Array.hpp
tests/: expect.test.ts  logging.js  logging.ts  tsconfig.json  typescript.test.ts
tests/docs/: hello_world.txt
tests/module/: a.js  a.ts  b.js  b.ts  c.js  c.ts
tests/natives/: _http.test.ts  fetch.test.js  fetch.test.ts  fs.test.js  fs.test.ts  http.js  http.test.ts  http.ts
tests/natives/test/: warnings.test.js  warnings.test.ts
tests/pkg/: pkg.test.js  pkg.test.ts  pkg.tin.json
tests/pkg/pkg/is-even/: index.js  index.ts
tests/pkg/pkg/is-odd/: .deps.arr  index.js  index.ts
tests/prototypes/: array.test.js  array.test.ts
tests/types/: global.d.ts
